# lektor-i18n-plugin

./: .git-blame-ignore-revs  .gitignore  CHANGES.md  README  README.md  lektor_i18n.py  pyproject.toml  setup.py
